tests/dataset/tpc-ds/compiler/c/q37.error
/tmp/q37.c: In function ‘test_TPCDS_Q37_simplified’:
/tmp/q37.c:229:51: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  229 |   if (test_TPCDS_Q37_simplified_result.len != tmp1.len) {
      |                                                   ^
      |                                                   ->
/tmp/q37.c:233:60: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  233 |       if (test_TPCDS_Q37_simplified_result.data[i3] != tmp1.data[i3]) {
      |                                                            ^
      |                                                            ->
/tmp/q37.c: In function ‘main’:
/tmp/q37.c:293:38: error: incompatible types when assigning to type ‘list_int’ from type ‘result_item_list_t’
  293 |   test_TPCDS_Q37_simplified_result = result;
      |                                      ^~~~~~
